removed deprecated apis